fixed safari translate3d clipping

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 canvas {
   display: block;
+  /* transform: translate3d(0, 0, -2em); */
 }
 
 ::-webkit-scrollbar {
@@ -23,6 +24,7 @@ input[type='range'] {
   margin: 0 auto;
   outline: 0;
 }
+
 input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
   background-color: #eee;
@@ -53,29 +55,20 @@ input[type='range']::-moz-range-thumb:active {
 }
 
 button {
-  position: relative;
-  display: inline-block;
   cursor: pointer;
-  outline: none;
   border: 0;
-  vertical-align: middle;
-  text-decoration: none;
-  /* font-size: inherit;
-  font-family: inherit; */
-}
-button {
-  font-weight: 600;
-  /* color: #382b22; */
+  font-weight: bold;
   font-size: 1.1em;
   text-transform: uppercase;
   padding: 0.75em 1em;
   background: #eee;
-  /* border: 2px solid #b18597; */
   border-radius: 0.75em;
   transform-style: preserve-3d;
+  transform: translate3d(0, 0, 1em);
   transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
     background 150ms cubic-bezier(0, 0, 0.58, 1);
 }
+
 button::before {
   position: absolute;
   content: '';
@@ -87,23 +80,27 @@ button::before {
   bottom: 0;
   background: #ccc;
   border-radius: inherit;
-  /* box-shadow: 0 0 0 2px #6f87ad, 0 0.625em 0 0 #a0c2f9; */
   transform: translate3d(0, 0.5em, -1em);
+  /* transform: translateY(0.5em); */
   transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
     box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
 }
+
 button:hover {
-  background: #ccc;
-  transform: translate(0, 0.25em);
+  background: #fff;
+  transform: translate3d(0, 0.25em, 1em);
 }
+
 button:hover::before {
   /* box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2; */
   transform: translate3d(0, 0.25em, -1em);
 }
+
 button:active {
   background: #eee;
-  transform: translate(0em, 0.5em);
+  transform: translate3d(0em, 0.5em, 1em);
 }
+
 button:active::before {
   /* box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2; */
   transform: translate3d(0, 0, -1em);
